syntax = "proto3";

package EcdarProtoBuf;

option java_multiple_files = false;
option java_package = "EcdarProtoBuf";
option java_outer_classname = "ServiceProtos";

import "query.proto";

import "google/protobuf/empty.proto";

service EcdarBackend {
    rpc UpdateComponents(ComponentsUpdateRequest) returns (google.protobuf.Empty);
    rpc SendQuery(Query) returns (QueryResponse);
}